<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <TextView
    style="@style/wrap_w_wrap_h"
    android:padding="@dimen/norm_spacing"
    android:text="@string/activity_add_bulk_fireworks_text" />

  <EditText
    android:id="@+id/add_bulk_fireworks_number"
    style="@style/match_w_wrap_h"
    android:layout_margin="@dimen/norm_spacing"
    android:hint="@string/activity_add_bulk_fireworks_input_number"
    android:imeOptions="actionNext"
    android:inputType="number"
    android:maxLines="1" />

  <Button
    android:id="@+id/add_bulk_fireworks_add_button"
    style="@style/match_w_wrap_h"
    android:layout_margin="@dimen/norm_spacing"
    android:hint="@string/button_add_fireworks" />

</LinearLayout>
